<resources>
    <string name="app_name">Patide</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Your Email</string>
    <string name="prompt_password">Enter Your Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="title_activity_main_menu">Patide</string>
    <string name="title_home">All Events</string>
    <string name="title_new_event">Create Event</string>
    <string name="title_settings">Settings</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="action_reset_password">Forgot Password ?</string>
    <string name="reset_pass_button">Reset Password</string>
    <string name="check_your_email_text">Check Your E-Mail</string>

    <!-- Patide -->

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="auth_success">Authentication Granted!</string>

    <!-- User Screen Place Holders -->

    <string name="userscreen_placehodler_name">name placeholder</string>
    <string name="userscreen_placehodler_text">text text text</string>
    <string name="userscreen_placehodler_number">11</string>

    <!-- User Screen Changeable -->

    <string name="userscreen_button_edit">Edit</string>
    <string name="userscreen_button_done">Done</string>

    <!-- User Screen Hints -->

    <string name="userscreen_email">Set Up New E-Mail</string>
    <string name="userscreen_password">Set Up New Password</string>
    <string name="userscreen_leisure_time">Leisure Time</string>
    <string name="userscreen_sleep_time">Sleep Time</string>
    <string name="userscreen_work_time">Work Time</string>

    <!-- User Screen Headers -->

    <string name="user_screen_user_info">User Information</string>
    <string name="user_screen_user_habits">User Habits</string>
    <string name="user_screen_notifications">User Notifications</string>

    <!-- New Event Screen -->

    <string name="eventscreen_name">Name</string>
    <string name="eventscreen_estimated_time">Estimated Time</string>
    <string name="eventscreen_choose_time">Choose Time</string>
    <string name="eventscreen_choose_priority">Choose Priority</string>
    <string name="eventscreen_comment">Comment</string>
    <string name="eventscreen_done">Done</string>

    <string name="all_events_hour">Date</string>
    <string name="all_events_day">Name</string>
    <string name="all_events_date">Priority</string>

    <string name="button_go_back"> \t Go Back  \t </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sure">Are you sure?</string>


    <!-- Facebook -->

    <string name="facebook_app_id">1682642655082550</string>
    <string name="fb_login_protocol_scheme">fb1682642655082550</string>
    <string name="facebook_client_token">6618e80232ddc998ba8e2e83afd32d24</string>

</resources>
