<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patide_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wrexsoft.canturgut.patide.SignUpActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/app_name"
                android:textColor="@color/patide_color"
                android:textSize="30sp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_patide_green_w"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/patide_accept"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/go_to_signup_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_blue_color"
                android:text="@string/action_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/patide_blue"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/go_to_google_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_white_color"
                android:text="@string/google_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/patide_color"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forget_password"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_red_color"
                android:text="@string/action_reset_password"
                android:textAllCaps="false"
                android:textColor="@color/patite_warning"
                android:textSize="21sp"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_login"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:id="@+id/login_progress"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
