<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.wrexsoft.canturgut.patide.ForgotPasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/forgot_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/prompt_email"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/go_back"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_red_color"
            android:text="@string/button_go_back"
            android:textAllCaps="false"
            android:textColor="@color/patite_warning"
            android:textSize="21sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/forget_password"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_red_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/reset_pass_button"
            android:textAllCaps="false"
            android:textColor="@color/patite_warning"
            android:textSize="21sp"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:id="@+id/check_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/check_your_email_text"
        android:textAlignment="center"
        android:textColor="@color/patite_warning"
        android:textSize="20sp"
        android:textStyle="bold" />


</android.support.v7.widget.LinearLayoutCompat>
