<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.wrexsoft.canturgut.patide.NewEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp">

                    <EditText
                        android:id="@+id/mEventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/eventscreen_name"
                        android:inputType="textPersonName"
                        android:textStyle="bold" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mEstimatedTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/eventscreen_estimated_time"
                        android:inputType="number"
                        android:textStyle="bold" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chooseDateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_white_color"
                    android:text="@string/eventscreen_choose_time"
                    android:textColor="@color/patide_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/mChoosePriority"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/eventscreen_choose_priority"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/choosePrioritySB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progress="3" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/eventscreen_comment"
                    android:inputType="textMultiLine"
                    android:lines="2" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chooseNotificationNewEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_white_color"
                    android:text="Choose Notification Time"
                    android:textColor="@color/patide_color" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/addEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_patide_color"
        android:text="@string/eventscreen_done"
        android:textAllCaps="false"
        android:textColor="@color/patide_white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
